# bitfinex_quotes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
conda.recipe/: meta.yaml
docker/: Dockerfile  build_bitfinex_docker_image.sh  centos_install_docker_and_bitfinex_image.sh  run_docker_image_interactive.sh
src/: f2.cpp  main.cpp  module_main.cpp  py_book.cpp  py_book.h  py_marker.cpp  py_quotes.cpp  version.h
tests/: test_basic.py  test_callback.py  test_callback2.py  test_code_snippet.py  test_install.sh
